--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,12 +39,40 @@
 	margin-bottom: 1px;
 }
 
-.ternaryTrio {
+.TrioBox {
+	position: absolute;
 	float: left;
 	width: 95px;
 	height:95px;
 	background-color: black;
+}
 
+.neuronBox {
+	float: left;
+	width: 99px;
+	height: 99px;
+	margin-right: 1px;
+	background-color: grey;
+	color: grey;
+	font-size: large;
+}
+
+.smallNeuronBox {
+	float: left;
+	width: 29px;
+	height: 99px;
+	margin-right: 1px;
+	background-color: grey;
+	color: grey;
+	font-size: large;
 }
 
 
+.outcomeContainer {
+	position: absolute;
+	left: 350px;
+	float: left;
+	width: 300px;
+	height: 120px;
+	background-color: #808080;
+}
