--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,48 +13,29 @@
     background-color: grey;
 }
 
-.ternaryInnerThird {
-	width:  30px;
-	height: 30px;
-	background-color: grey;
-	
-/*	margin-bottom: 1px;
-	margin-top:1px;*/
-}
 
-.ternaryWinNeuron {
-	float: left;
-	width: 30px;
-	height: 90px;
-	
-	background-color: black
-}
 
-.ternaryDrawNeuron {
+.neuronContainer {
 	float: left;
-	width: 30px;
-	height:90px;
-	background-color: grey;
-	margin-right: 1px;
-	margin-bottom: 1px;
-}
-
-.trioBox {
-	/*position: absolute;*/
-	float: left;
-	width: 95px;
-	height:95px;
+	width: 99px;
+	height: 120px;
+	color: black;
 	background-color: black;
+	margin-bottom: 1px;
+	margin-right: 1px;
+	margin-left: 1px;
 }
 
-.trioTitle {
+.neuronTitle {
+
 	float: left;
-	width: 95px;
+	width: 99px;
 	height: 20px;
 	font-size: small;
 	color: black;
 	background-color: grey;
 	margin-bottom: 1px;
+	margin-right: 1px;
 }
 
 .neuronBox {
@@ -67,33 +48,71 @@
 	font-size: large;
 }
 
-.smallNeuronBox {
+
+.outcomeContainer {
+	position: absolute;
+	left: 350px;
+	float: left;
+	width: 303px;
+	height: 120px;
+	background-color: black;
+}
+
+.trioContainer {
+	position: absolute;
+	left: 350px;
+	top: 250px;
+	float: left;
+	width: 370px;
+	height: 180px;
+	background-color: #808080;
+}
+
+.trioBox {
+	/*position: absolute;*/
+	float: left;
+	width: 92px;
+	height:87px;
+	background-color: black;
+}
+
+.trioTitle {
+
+	float: left;
+	width: 92px;
+	height: 20px;
+	font-size: small;
+	color: black;
+	background-color: grey;
+	margin-bottom: 1px;
+}
+
+.tripleNeuronBox {
 	float: left;
 	width: 29px;
-	height: 70px;
+	height: 60px;
 	margin-right: 1px;
 	background-color: grey;
 	color: grey;
 	font-size: large;
 }
 
-
-.outcomeContainer {
-	position: absolute;
-	left: 350px;
+.thirdNeuron {
 	float: left;
-	width: 300px;
-	height: 120px;
-	background-color: #808080;
+	width: 29px;
+	height: 20px;
+	margin-right: 1px;
+	background-color: grey;
+	color: grey;
+	font-size: large;
 }
 
-.trioContainer {
-	position: absolute;
-	left: 350px;
-	top: 200px;
+.secondNeuron {
 	float: left;
-	width: 400px;
-	height: 200px;
-	background-color: #808080;
+	width: 29px;
+	height: 30px;
+	margin-right: 1px;
+	background-color: grey;
+	color: grey;
+	font-size: large;
 }
-
